--- a/src/assets/css/experience.css
+++ b/src/assets/css/experience.css
@@ -8,7 +8,7 @@
     border-left: 5px solid #0002A1;
 }
 
-.bordered{
+/* .bordered{
     cursor: pointer;
     border: 1px solid #0002A1;
     background: transparent;
@@ -21,8 +21,70 @@
     justify-content: space-between;
     align-items: center;
 }
-.parentOfExperience:hover .bordered:not(:hover) {
+.bordered:hover{
+    scale: 1.1;
+} */
+
+
+.bordered {
+    /* box-shadow: inset 0 0 0 4px #58cdd1; */
+    cursor: pointer;
+    border: 1px solid #0002A1;
+    border-radius: 10px;
+    color: #beb7b7;
+    -webkit-transition: color 0.25s 0.0833333333s;
+    transition: color 0.25s 0.0833333333s;
+    position: relative;
+  }
+  
+  .bordered::before,
+  .bordered::after {
+    border: 1px solid #fff;
+    box-sizing: border-box;
+    content: '';
+    pointer-events: none;
+    position: absolute;
+    width: 0rem;
+    height: 0;
+    bottom: 0;
+    right: 0;
+  }
+  
+  .bordered::before {
+    border-bottom-width: 2px;
+    border-left-width: 2px;
+  }
+  
+  .bordered::after {
+    border-top-width: 2px;
+    border-right-width: 2px;
+  }
+  
+  .bordered:hover {
+    color: #fff;
+  }
+  
+  .bordered:hover::before,
+  .bordered:hover::after {
+    border-color: #0002A1;
+    border-radius: 10px;
+    -webkit-transition: border-color 0s, width 0.25s, height 0.25s;
+    transition: border-color 0s, width 0.25s, height 0.25s;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .bordered:hover::before {
+    -webkit-transition-delay: 0s, 0s, 0.25s;
+    transition-delay: 0s, 0s, 0.25s;
+  }
+  
+  .bordered:hover::after {
+    -webkit-transition-delay: 0s, 0.25s, 0s;
+    transition-delay: 0s, 0.25s, 0s;
+  }
+/* .parentOfExperience:hover .bordered:not(:hover) {
     filter: blur(50%);
     color: transparent;
     text-shadow: 0 0 5px rgba(0,0,0,0.5);
-}
+} */
